Address issue #74